--- a/wp-content/themes/rapha/common/sass/_dashboard.scss
+++ b/wp-content/themes/rapha/common/sass/_dashboard.scss
@@ -1,4 +1,72 @@
+#top {
+    .hideSide {
+        ul {
+            li:nth-child(1) {
+                background: $color-light-gray-hover;
+            }
+        }
+    }
+}
+#orders {
+    .hideSide {
+        ul {
+            li:nth-child(2) {
+                background: $color-light-gray-hover;
+            }
+        }
+    }
+}
+#info {
+    .hideSide {
+        ul {
+            li:nth-child(3) {
+                background: $color-light-gray-hover;
+            }
+        }
+    }
+}
+#address {
+    .hideSide {
+        ul {
+            li:nth-child(4) {
+                background: $color-light-gray-hover;
+            }
+        }
+    }
+}
 .dashboard {
+    .numb-cart {
+        background: $color-green;
+        color: $color-blue-dark;
+        width: 14px;
+        height: 14px;
+        border-radius: 100%;
+        text-align: center;
+        display: inline-block;
+        font-size: 11px;
+        font-weight: bold;
+        line-height: 14px;
+        position: absolute;
+        right: -10px;
+        top: -2px;
+    }
+    .js-toogle-cart {
+        position: relative;
+    }
+    .wrap-form {
+        position: relative;
+        width: 30%;
+        input {
+            border: none;
+        }
+        button {
+            color: $color-blue-dark;
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    }
     .h2_page {
         color: $color-blue-dark;
     }
@@ -6,6 +74,21 @@
         background: $color-blue-dark;
         padding: 5px 15px;
         height: 80px;
+        position: relative;
+        .cart-head {
+            position: absolute;
+            top: 80px;
+            padding: 20px;
+            right: 0;
+            background: $color-white;
+            -webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.4);
+            -moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.4);
+            box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.4);
+            width: 350px;
+            .list-cart {
+                margin-top: 0;
+            }
+        }
         .logo {
             width: 140px;
             height: auto;
@@ -258,6 +341,52 @@
         textarea {
             min-height: 100px;
         }
+    .confirm-box {
+        text-align: center;
+        i {
+            font-size: 60px;
+            color: $color-blue-dark;
+        }
+    }    
+    .order-list {
+        width: 100%;
+        border-collapse: collapse;
+        a {
+            color: $color-blue-dark;
+        }
+        thead {
+            background: $color-light-gray;
+            font-weight: bold;
+            td {
+                padding: 15px 10px;
+                &:last-child {
+                    text-align: center;
+                }
+            }
+        }
+        tbody {
+            tr {
+                td {
+                    p {
+                        padding: 15px 10px;
+                        &:last-child {
+                            text-align: center;
+                        }
+                    }
+                    border-bottom: 1px solid $color-light-gray;
+                    &:hover {
+                        background: $color-light-gray;
+                    }
+                }
+            }
+            
+        }
+        &-detail {
+            display: none;
+            color: $color-dark;
+            font-style: italic;
+        }
+    }
 }
 .login {
     &-box {
@@ -289,6 +418,7 @@
         :-moz-placeholder { /* Firefox 18- */ font-weight: 200; }
     }
       .loop-wrapper {
+          pointer-events: none;
         margin: 0 auto;
         position: absolute;
         bottom: 0;
