--- a/wp-content/themes/rapha/common/css/style.css
+++ b/wp-content/themes/rapha/common/css/style.css
@@ -583,6 +583,9 @@ button {
 .grid--40 {
   width: 40%; }
 
+.grid--50 {
+  width: 50%; }
+
 .grid--55 {
   width: 55%; }
 
@@ -905,17 +908,69 @@ footer {
     footer .map {
       width: 100%; } }
 
+#top .hideSide ul li:nth-child(1) {
+  background: #e1e1e1; }
+
+#orders .hideSide ul li:nth-child(2) {
+  background: #e1e1e1; }
+
+#info .hideSide ul li:nth-child(3) {
+  background: #e1e1e1; }
+
+#address .hideSide ul li:nth-child(4) {
+  background: #e1e1e1; }
+
 .dashboard {
   font-family: 'Dosis', sans-serif;
   /* Firefox */
   /* hide default down arrow in IE10*/
   /* hack to fall back in opera */ }
+  .dashboard .numb-cart {
+    background: #92c83e;
+    color: #07407e;
+    width: 14px;
+    height: 14px;
+    border-radius: 100%;
+    text-align: center;
+    display: inline-block;
+    font-size: 11px;
+    font-weight: bold;
+    line-height: 14px;
+    position: absolute;
+    right: -10px;
+    top: -2px; }
+  .dashboard .js-toogle-cart {
+    position: relative; }
+  .dashboard .wrap-form {
+    position: relative;
+    width: 30%; }
+    .dashboard .wrap-form input {
+      border: none; }
+    .dashboard .wrap-form button {
+      color: #07407e;
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%); }
   .dashboard .h2_page {
     color: #07407e; }
   .dashboard .header {
     background: #07407e;
     padding: 5px 15px;
-    height: 80px; }
+    height: 80px;
+    position: relative; }
+    .dashboard .header .cart-head {
+      position: absolute;
+      top: 80px;
+      padding: 20px;
+      right: 0;
+      background: #fff;
+      -webkit-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.4);
+      -moz-box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.4);
+      box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.4);
+      width: 350px; }
+      .dashboard .header .cart-head .list-cart {
+        margin-top: 0; }
     .dashboard .header .logo {
       width: 140px;
       height: auto; }
@@ -1101,6 +1156,35 @@ footer {
     background: none; }
   .dashboard textarea {
     min-height: 100px; }
+  .dashboard .confirm-box {
+    text-align: center; }
+    .dashboard .confirm-box i {
+      font-size: 60px;
+      color: #07407e; }
+  .dashboard .order-list {
+    width: 100%;
+    border-collapse: collapse; }
+    .dashboard .order-list a {
+      color: #07407e; }
+    .dashboard .order-list thead {
+      background: #f5f5f5;
+      font-weight: bold; }
+      .dashboard .order-list thead td {
+        padding: 15px 10px; }
+        .dashboard .order-list thead td:last-child {
+          text-align: center; }
+    .dashboard .order-list tbody tr td {
+      border-bottom: 1px solid #f5f5f5; }
+      .dashboard .order-list tbody tr td p {
+        padding: 15px 10px; }
+        .dashboard .order-list tbody tr td p:last-child {
+          text-align: center; }
+      .dashboard .order-list tbody tr td:hover {
+        background: #f5f5f5; }
+    .dashboard .order-list-detail {
+      display: none;
+      color: #404040;
+      font-style: italic; }
 
 .login-box {
   position: absolute;
@@ -1136,6 +1220,7 @@ footer {
     font-weight: 200; }
 
 .login .loop-wrapper {
+  pointer-events: none;
   margin: 0 auto;
   position: absolute;
   bottom: 0;
