--- a/wp-content/themes/rapha/common/sass/_dashboard.scss
+++ b/wp-content/themes/rapha/common/sass/_dashboard.scss
@@ -76,6 +76,7 @@
         height: 80px;
         position: relative;
         .cart-head {
+            display: none;
             position: absolute;
             top: 80px;
             padding: 20px;
