--- a/wp-content/themes/rapha/common/sass/_vars.scss
+++ b/wp-content/themes/rapha/common/sass/_vars.scss
@@ -1,5 +1,9 @@
 $font-monserrat : 'Montserrat', sans-serif;
 $font-roboto : 'Roboto', sans-serif;
+
+$font-barlow : 'Barlow', sans-serif;
+$font-josefin : 'Josefin Sans', sans-serif;
+
 $font-bold : 700;
 $font-medium: 500;
 $font-regular: 400;
@@ -30,5 +34,12 @@ $color-blue-light: #52a2f8;
 $color-border: #cccccc;
 
 $color-green: #92c83e;
+
+$color-border:#4D675D;
+
+$color-footer: #001D16;
+$color-icon: #18362E;
+
+$color-tea: #DC1F26;
 
 
