--- a/wp-content/themes/rapha/common/css/style.css
+++ b/wp-content/themes/rapha/common/css/style.css
@@ -318,8 +318,11 @@ template {
     .sp {
       display: block; } }
 
-body {
+body.dashboard {
   font-family: "Roboto", sans-serif; }
+
+body {
+  font-family: "Barlow", sans-serif; }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0; }
@@ -352,9 +355,31 @@ button {
   width: 100%; }
 
 .container {
-  max-width: 1200px;
+  max-width: 1080px;
   padding: 0 15px;
   margin: 0 auto; }
+
+.header-page {
+  font-size: 80px;
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase; }
+  .header-page-sub {
+    font-size: 30px;
+    font-family: "Barlow", sans-serif;
+    font-weight: 700; }
+
+.vn .mission-section .header-page {
+  font-size: 50px; }
+
+.section-text {
+  font-size: 15px;
+  font-family: "Barlow", sans-serif;
+  font-weight: 300;
+  line-height: 1.7; }
+  .header-page-sub + .section-text {
+    margin-top: 55px; }
+  .section-text--blur {
+    opacity: .5; }
 
 .breadcrumb {
   display: flex;
@@ -444,7 +469,7 @@ button {
   margin-top: auto; }
 
 .mt--0 {
-  margin-top: 0; }
+  margin-top: 0 !important; }
 
 .mt--10 {
   margin-top: 10px; }
@@ -474,6 +499,12 @@ button {
   margin-top: 50px; }
   @media (max-width: 767px) {
     .mt--50--mb {
+      margin-top: 20px; } }
+
+.mt--60 {
+  margin-top: 60px; }
+  @media (max-width: 767px) {
+    .mt--60--mb {
       margin-top: 20px; } }
 
 .mt--70 {
@@ -518,6 +549,9 @@ button {
 .taC {
   text-align: center; }
 
+.taR {
+  text-align: right; }
+
 .tbl-page {
   width: 100%;
   border-collapse: separate;
@@ -534,24 +568,45 @@ button {
     padding: 10px; }
 
 .input-page {
-  height: 35px;
-  border-radius: 3px;
+  height: 45px;
   width: 100%;
-  border: 1px solid #cccccc;
+  border: 1px solid #4D675D;
   padding: 10px;
-  outline: none; }
+  outline: none;
+  background: transparent; }
   .input-page-radio {
     margin-right: 10px; }
 
+.textarea-page {
+  border: 1px solid #4D675D;
+  background: transparent;
+  height: 150px;
+  width: 100%;
+  padding: 10px; }
+
+table.table-form-page {
+  width: 100%;
+  border-collapse: collapse;
+  font-family: "Josefin Sans", sans-serif; }
+  table.table-form-page tr td {
+    padding: 15px 0; }
+  table.table-form-page tr th {
+    text-align: left;
+    text-transform: uppercase; }
+
 .btn-page {
-  background: #07407e;
+  background: #92c83e;
   color: #fff;
-  height: 30px;
-  line-height: 30px;
+  height: 50px;
+  line-height: 50px;
   display: inline-block;
   text-align: center;
   border-radius: 3px;
-  padding: 0 15px; }
+  padding: 0 30px;
+  font-weight: bold;
+  letter-spacing: 1px; }
+  .btn-page i {
+    margin-left: 30px; }
   .btn-page.disable {
     opacity: .3;
     pointer-events: none; }
@@ -561,6 +616,8 @@ button {
     color: #07407e;
     padding: 5px 15px;
     border-radius: 4px; }
+  .section-text + .btn-page {
+    margin-top: 70px; }
 
 .grid--80 {
   width: 80%; }
@@ -588,6 +645,9 @@ button {
 
 .grid--40 {
   width: 40%; }
+
+.grid--45 {
+  width: 45%; }
 
 .grid--50 {
   width: 50%; }
@@ -619,56 +679,49 @@ button {
 
 .slick-arrow {
   border: none;
-  background: rgba(0, 0, 0, 0.2);
-  border-radius: 100%;
-  font-size: 0;
+  font-size: 15px;
   position: absolute;
   z-index: 500;
   outline: none;
-  width: 50px;
-  height: 50px; }
+  width: 100px;
+  height: 20px;
+  background: none;
+  cursor: pointer; }
+  .slick-arrow:hover {
+    opacity: .6; }
 
 button.slick-next {
-  right: -30px;
+  right: -80px;
   top: 45%; }
+  button.slick-next::before {
+    content: '';
+    background: url("../img/top/arrow_next.svg") no-repeat right top;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    margin-top: -5px;
+    width: 20px;
+    height: 10px; }
   @media (max-width: 767px) {
     button.slick-next {
       right: 0; } }
 
 button.slick-prev {
-  left: -30px;
+  width: 120px;
+  left: -80px;
   top: 45%; }
+  button.slick-prev::before {
+    content: '';
+    background: url("../img/top/arrow_prev.svg") no-repeat right top;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    margin-top: -5px;
+    width: 20px;
+    height: 10px; }
   @media (max-width: 767px) {
     button.slick-prev {
       left: 0; } }
-
-.slick-prev:before {
-  content: "";
-  position: absolute;
-  left: 20px;
-  top: 33%;
-  width: 16px;
-  height: 16px;
-  border-left: 2px solid #fff;
-  border-top: 2px solid #fff;
-  -moztransform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg); }
-
-.slick-next:before {
-  content: "";
-  position: absolute;
-  right: 20px;
-  top: 33%;
-  width: 16px;
-  height: 16px;
-  border-left: 2px solid #fff;
-  border-top: 2px solid #fff;
-  -moztransform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
-  -ms-transform: rotate(135deg);
-  transform: rotate(135deg); }
 
 .text-align--center {
   text-align: center; }
@@ -712,13 +765,13 @@ button.slick-prev {
 
 .table-page {
   width: 100%;
-  border: 1px solid #cccccc;
+  border: 1px solid #4D675D;
   border-collapse: collapse; }
   .table-page thead {
     background: #f5f5f5; }
   .table-page tr td {
-    border-bottom: 1px solid #cccccc;
-    border-left: 1px solid #cccccc;
+    border-bottom: 1px solid #4D675D;
+    border-left: 1px solid #4D675D;
     padding: 10px; }
 
 .logo_teddy {
@@ -735,11 +788,29 @@ button.slick-prev {
   .logo_teddy img {
     height: 45px; }
 
+.ontop-button {
+  position: fixed;
+  right: 30px;
+  bottom: 60px; }
+
 .header {
   padding: 20px 0; }
 
 .img-logo {
   height: 40px; }
+
+#header {
+  padding: 20px 50px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; }
+  #header .img-logo {
+    height: 80px; }
+
+.fix-header {
+  background: rgba(255, 255, 255, 0.6); }
 
 .nav-menu {
   position: relative;
@@ -784,7 +855,7 @@ button.slick-prev {
 
 .nav-link {
   position: relative;
-  color: #3989c9;
+  color: #313131;
   text-decoration: none;
   padding: 20px;
   text-align: left;
@@ -792,20 +863,16 @@ button.slick-prev {
   margin-left: auto;
   margin-right: auto;
   font-size: 16px;
-  font-weight: bold;
   line-height: 19px;
   letter-spacing: 0.05em;
   transition: ease-in-out 500ms; }
   .nav-link:hover {
-    color: #3989c9; }
-  .nav-link:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 3px;
-    bottom: 0px;
-    left: 0px;
-    background-color: #fff; }
+    opacity: .6; }
+
+.header-link {
+  color: #313131; }
+  .header-link:hover {
+    opacity: .6; }
 
 .nav-bar--right {
   width: 75%;
@@ -824,109 +891,209 @@ button.slick-prev {
     display: block;
     z-index: 1000; } }
 
-footer {
-  margin-top: 80px;
+.footer {
+  background: #001D16;
   padding: 25px 0;
-  border-top: 1px solid #d2d4d5; }
-  footer .brand-info {
-    width: 37%; }
-  footer .brand-img {
-    width: 70px;
-    height: 70px;
-    margin-bottom: 20px; }
-  footer .brand-name {
-    font-weight: 700; }
-  footer .footer-menu {
-    margin: 0;
-    padding: 0; }
-    footer .footer-menu li {
-      font-size: 14px;
-      font-family: "Roboto", sans-serif;
+  font-family: "Josefin Sans", sans-serif;
+  color: #fff; }
+  .footer .copyright {
+    opacity: .5;
+    line-height: 50px; }
+  .footer ul li {
+    margin: 0 25px; }
+    .footer ul li .icon {
       display: inline-block;
-      line-height: 30px; }
-      footer .footer-menu li a {
-        color: #fff;
-        padding-right: 20px;
-        border-right: 1px solid;
-        margin-right: 16px; }
-      footer .footer-menu li:last-child a {
-        border-right: none; }
-  footer .copy-right {
-    font-size: 14px;
-    font-family: "Roboto", sans-serif;
-    line-height: 30px; }
-    @media (max-width: 767px) {
-      footer .copy-right {
-        font-size: 11px; } }
-  footer .contact-info {
-    width: 29%; }
-  footer .contact-title {
-    font-weight: 700;
-    margin-bottom: 10px; }
-  footer .contact {
-    padding-left: 30px;
-    margin-bottom: 30px;
-    position: relative; }
-    footer .contact i {
-      position: absolute;
-      left: 0;
-      top: 6px;
-      font-size: 16px; }
-  footer .address-title {
-    font-weight: 700;
-    margin-bottom: 10px; }
-  footer .address {
-    padding-left: 30px;
-    position: relative; }
-    footer .address i {
-      position: absolute;
-      left: 0;
-      top: 6px;
-      font-size: 16px; }
-  footer .follow-info {
-    width: 34%; }
-  footer .follow-title {
-    font-weight: 700;
-    display: inline-block;
-    margin-right: 30px;
-    margin-bottom: 40px; }
-  footer .ico-group {
-    display: inline-block; }
-  footer .fb-ico, footer .youtube-ico {
-    margin-right: 10px; }
-    footer .fb-ico i, footer .youtube-ico i {
+      width: 50px;
+      height: 50px;
+      background: #18362E;
+      border-radius: 100%;
+      text-align: center;
+      line-height: 50px;
+      margin-right: 20px; }
+    .footer ul li a {
       color: #fff;
-      font-size: 16px; }
-  footer .map {
-    width: 370px;
-    height: 181px;
-    background-color: #F8F8F8; }
+      font-size: 15px; }
+      .footer ul li a i {
+        color: #fff; }
 
-@media (max-width: 767px) {
-  footer {
-    padding-bottom: 60px; }
-    footer .brand-info {
+.about-section {
+  background: url("../img/top/bg_about.jpg") repeat left top;
+  color: #fff;
+  min-height: 80vh;
+  padding: 100px 0;
+  display: flex;
+  align-items: center;
+  position: relative;
+  overflow: hidden; }
+  .about-section-wrap {
+    width: 100%; }
+  .about-section::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: -5%;
+    width: 45%;
+    height: 100%;
+    background: url("../img/top/bg_text.png") no-repeat left center;
+    background-size: 100% auto; }
+
+.mission-section {
+  min-height: 80vh;
+  position: relative;
+  color: #fff; }
+  .mission-section .container {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%; }
+  .mission-section .header-page {
+    position: relative; }
+  .mission-section .header-page-sub {
+    position: relative; }
+  .mission-section__img {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 48%;
+    transform: translateY(-50%);
+    z-index: 300; }
+  .mission-section__leaf {
+    position: absolute;
+    right: 70%;
+    top: -10px;
+    z-index: 200;
+    margin-top: -120px; }
+  .mission-section::before {
+    background: #052620;
+    content: '';
+    width: 70%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0; }
+  .mission-section::after {
+    content: '';
+    width: 30%;
+    height: 50%;
+    background: url("../img/top/bg_about.jpg") repeat left top;
+    position: absolute;
+    top: 0;
+    left: 0; }
+  .mission-section-grid {
+    position: absolute;
+    background: #f2f2f2;
+    bottom: 0;
+    left: 0;
+    width: 30%;
+    height: 50%; }
+
+.menu-section {
+  min-height: 80vh;
+  background: url("../img/top/bg_menu.jpg") repeat-x left bottom;
+  position: relative;
+  overflow-y: hidden;
+  display: flex;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  padding: 120px 0; }
+  .menu-section-wrap {
+    width: 100%; }
+  .menu-section__top {
+    top: 0;
+    left: -5%;
+    position: absolute; }
+  .menu-section__bottom {
+    position: absolute;
+    bottom: -5%;
+    right: -5%; }
+  .menu-section-wrap-list {
+    overflow-x: auto;
+    max-width: 1080px; }
+  .menu-section-list {
+    margin-top: 50px;
+    position: relative;
+    min-width: 100%; }
+    .menu-section-list:before {
+      content: '';
       width: 100%;
+      height: 1px;
+      background: #313131;
+      position: absolute;
+      bottom: 0px;
+      left: 0;
+      opacity: .5; }
+    .menu-section-list li {
+      display: inline-block;
+      padding: 0 25px 10px;
+      opacity: .5;
+      text-align: center;
+      position: relative;
+      text-transform: uppercase; }
+      .menu-section-list li:first-child {
+        text-align: left;
+        padding-left: 0; }
+      .menu-section-list li:last-child {
+        text-align: left; }
+      .menu-section-list li.active {
+        opacity: 1; }
+        .menu-section-list li.active a {
+          color: #DC1F26;
+          font-weight: bold; }
+        .menu-section-list li.active:before {
+          content: '';
+          width: 100%;
+          height: 1px;
+          background: #DC1F26;
+          position: absolute;
+          bottom: 0;
+          left: 0; }
+    .menu-section-list a {
+      color: #313131;
+      font-size: 20px; }
+  .menu-section-tab {
+    margin-top: 50px;
+    display: none; }
+    .menu-section-tab i {
+      color: #92c83e;
+      margin-right: 15px; }
+  .menu-section #flavored-tea {
+    display: block; }
+  .menu-section #cat_flavored-tea {
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin: 0 -10px; }
+    .menu-section #cat_flavored-tea img {
       margin-bottom: 20px; }
-    footer .footer-menu li {
-      display: block; }
-      footer .footer-menu li a {
-        border-right: 0; }
-    footer .contact-info {
-      width: 100%;
-      margin-bottom: 20px; }
-    footer .contact-title {
-      margin-bottom: 0; }
-    footer .contact {
-      margin-bottom: 10px; }
-    footer .address-title {
-      margin-bottom: 0; }
-    footer .follow-info {
-      width: 100%; }
-    footer .follow-title {
-      margin-bottom: 5px; }
-    footer .map {
-      width: 100%; } }
+    .menu-section #cat_flavored-tea li {
+      padding: 0  20px;
+      font-weight: bold; }
+
+.location-section {
+  min-height: 70vh;
+  padding: 100px 0;
+  background: url("../img/top/bg_location.jpg") no-repeat left top;
+  background-size: cover;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  position: relative;
+  overflow: hidden; }
+  .location-section-wrap {
+    width: 100%; }
+
+.contact-section {
+  min-height: 80vh;
+  padding: 100px 0;
+  background: url("../img/top/bg_mission.jpg") repeat-x left bottom;
+  background-size: cover;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  position: relative;
+  overflow: hidden; }
+  .contact-section-wrap {
+    width: 100%; }
 
 #top .hideSide ul li:nth-child(1) {
   background: #e1e1e1; }
@@ -1020,7 +1187,7 @@ footer {
     padding: 40px 0;
     min-height: calc(100vh - 80px);
     background: #f5f5f5;
-    border-right: 1px solid #cccccc;
+    border-right: 1px solid #4D675D;
     position: relative; }
     .dashboard .hideSide h3 {
       padding: 0 25px;
@@ -1057,7 +1224,7 @@ footer {
       padding: 15px 20px;
       font-size: 18px; }
     .dashboard .cart-fixed-inner {
-      border: 1px solid #cccccc;
+      border: 1px solid #4D675D;
       padding: 20px;
       border-radius: 10px;
       overflow: hidden; }
@@ -1066,13 +1233,13 @@ footer {
   .dashboard .main-dashboard {
     width: 70%; }
   .dashboard .list-products {
-    border: 1px solid #cccccc;
+    border: 1px solid #4D675D;
     border-radius: 10px;
     overflow: hidden;
     margin-top: 30px; }
     .dashboard .list-products li h4 {
       position: relative;
-      border-bottom: 1px solid #cccccc; }
+      border-bottom: 1px solid #4D675D; }
       .dashboard .list-products li h4 a {
         color: #313131;
         background: #f5f5f5;
@@ -1119,7 +1286,7 @@ footer {
   .dashboard .list-cart {
     margin-top: 20px; }
     .dashboard .list-cart li {
-      border-top: 1px solid #cccccc;
+      border-top: 1px solid #4D675D;
       padding: 10px 0;
       color: #404040; }
       .dashboard .list-cart li:first-child {
@@ -1140,7 +1307,7 @@ footer {
   .dashboard input[type=number] {
     -moz-appearance: textfield; }
   .dashboard #list-address li {
-    border: 1px solid #cccccc;
+    border: 1px solid #4D675D;
     padding: 20px 40px 20px 20px;
     font-size: 16px;
     font-weight: bold;
