--- a/wp-content/themes/rapha/common/sass/_header.scss
+++ b/wp-content/themes/rapha/common/sass/_header.scss
@@ -7,6 +7,22 @@
 	height: 40px;
 }
 
+#header {
+	padding: 20px 50px;
+	position: fixed;
+	top:0;
+	left: 0;
+	width: 100%;
+	.img-logo {
+		height: 80px;
+	}
+	z-index: 1000;
+}
+
+.fix-header {
+	background: rgba(255,255,255,.6);
+}
+
 .nav-menu {
 	position: relative;
 	display: flex;
@@ -56,7 +72,7 @@
 }
 .nav-link {
 	position: relative;
-	color: $color-red;
+	color: $color-black;
     text-decoration: none;
     padding: 20px;
     text-align: left;
@@ -64,21 +80,18 @@
     margin-left: auto;
     margin-right: auto;
     font-size: 16px;
-    font-weight: bold;
     line-height: 19px;
     @include lt-spacing(50);
     transition: ease-in-out 500ms;
     &:hover {
-    	color: $color-red;
+    	opacity: .6;
 	}
-	&:after {
-		content: "";
-		position: absolute;
-		width: 100%;
-		height: 3px;
-		bottom: 0px;
-		left: 0px;
-		background-color: $color-white;
+}
+
+.header-link {
+	color: $color-black;
+	&:hover {
+    	opacity: .6;
 	}
 }
 
