--- a/wp-content/themes/rapha/common/css/style.css
+++ b/wp-content/themes/rapha/common/css/style.css
@@ -343,9 +343,6 @@ a {
   text-decoration: none; }
 
 p {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 30px;
   margin: 0; }
 
 button {
@@ -367,6 +364,11 @@ button {
     font-size: 30px;
     font-family: "Barlow", sans-serif;
     font-weight: 700; }
+  @media (max-width: 767px) {
+    .header-page {
+      font-size: 50px; }
+      .header-page-sub {
+        font-size: 16px; } }
 
 .vn .mission-section .header-page {
   font-size: 50px; }
@@ -378,6 +380,9 @@ button {
   line-height: 1.7; }
   .header-page-sub + .section-text {
     margin-top: 55px; }
+    @media (max-width: 767px) {
+      .header-page-sub + .section-text {
+        margin-top: 30px; } }
   .section-text--blur {
     opacity: .5; }
 
@@ -533,7 +538,7 @@ button {
 
 @media (max-width: 767px) {
   .mt__mb--0 {
-    margin: 0; }
+    margin: 0 !important; }
   .mt__mb--20 {
     margin-top: 20px; } }
 
@@ -550,7 +555,7 @@ button {
   text-align: center; }
 
 .taR {
-  text-align: right; }
+  text-align: right !important; }
 
 .tbl-page {
   width: 100%;
@@ -590,9 +595,19 @@ table.table-form-page {
   font-family: "Josefin Sans", sans-serif; }
   table.table-form-page tr td {
     padding: 15px 0; }
+    @media (max-width: 767px) {
+      table.table-form-page tr td {
+        width: 100%;
+        display: block;
+        padding-bottom: 20px; } }
   table.table-form-page tr th {
     text-align: left;
     text-transform: uppercase; }
+    @media (max-width: 767px) {
+      table.table-form-page tr th {
+        width: 100%;
+        font-size: 15px;
+        display: block; } }
 
 .btn-page {
   background: #92c83e;
@@ -615,9 +630,35 @@ table.table-form-page {
     background: none;
     color: #07407e;
     padding: 5px 15px;
-    border-radius: 4px; }
+    border-radius: 4px;
+    line-height: 35px;
+    height: 35px; }
   .section-text + .btn-page {
     margin-top: 70px; }
+
+.dashboard .btn-page {
+  background: #07407e;
+  height: 35px;
+  line-height: 35px;
+  font-size: 12px; }
+
+.dashboard .input-page {
+  height: 35px;
+  width: 100%;
+  border: 1px solid #A0A0A0;
+  padding: 10px;
+  outline: none;
+  background: transparent;
+  padding: 0 15px;
+  text-align: center; }
+  .dashboard .input-page-radio {
+    margin-right: 10px; }
+
+.dashboard .header {
+  padding-right: 30px; }
+
+#idBooking {
+  background: #fff; }
 
 .grid--80 {
   width: 80%; }
@@ -660,6 +701,9 @@ table.table-form-page {
 
 .grid--60 {
   width: 60%; }
+
+.grid--70 {
+  width: 70%; }
 
 .grid--75 {
   width: 75%; }
@@ -734,7 +778,8 @@ button.slick-prev {
   padding-top: 40px; }
 
 .popup {
-  width: 70%;
+  display: none;
+  width: 50%;
   position: fixed;
   left: 50%;
   top: 50%;
@@ -791,7 +836,42 @@ button.slick-prev {
 .ontop-button {
   position: fixed;
   right: 30px;
-  bottom: 60px; }
+  bottom: 60px;
+  z-index: 1000; }
+
+.text-link {
+  display: inline-block;
+  color: #07407e; }
+
+.text-red {
+  color: #E02020; }
+
+.toggleSection {
+  display: none; }
+
+#gmap-menu {
+  height: 60vh;
+  color: #313131; }
+
+.slick-dots {
+  position: absolute;
+  bottom: 10%;
+  right: 50px; }
+  .slick-dots li {
+    display: inline-block;
+    margin-right: 10px; }
+    .slick-dots li:last-child {
+      margin-right: 0; }
+    .slick-dots li .slick-active button {
+      opacity: 1; }
+  .slick-dots button {
+    width: 15px;
+    height: 15px;
+    font-size: 0;
+    outline: none;
+    border-radius: 100%;
+    background: #052026;
+    opacity: .2; }
 
 .header {
   padding: 20px 0; }
@@ -808,6 +888,26 @@ button.slick-prev {
   z-index: 1000; }
   #header .img-logo {
     height: 80px; }
+    @media (max-width: 767px) {
+      #header .img-logo {
+        height: 45px; } }
+  @media (max-width: 767px) {
+    #header {
+      padding: 10px 15px; } }
+  #header .nav-menu-button {
+    position: relative;
+    float: right;
+    cursor: pointer;
+    width: 40px;
+    height: 40px; }
+    #header .nav-menu-button .bar1,
+    #header .nav-menu-button .bar2,
+    #header .nav-menu-button .bar3 {
+      width: 30px;
+      height: 4px;
+      background-color: #333;
+      margin: 6px auto;
+      transition: 0.4s; }
 
 .fix-header {
   background: rgba(255, 255, 255, 0.6); }
@@ -884,6 +984,9 @@ button.slick-prev {
   color: #313131; }
   .header-link:hover {
     opacity: .6; }
+  @media (max-width: 767px) {
+    .header-link {
+      margin: 0 20px; } }
 
 .nav-bar--right {
   width: 75%;
@@ -910,8 +1013,14 @@ button.slick-prev {
   .footer .copyright {
     opacity: .5;
     line-height: 50px; }
+    @media (max-width: 767px) {
+      .footer .copyright {
+        font-size: 14px; } }
   .footer ul li {
     margin: 0 25px; }
+    @media (max-width: 767px) {
+      .footer ul li {
+        margin: 0 15px; } }
     .footer ul li .icon {
       display: inline-block;
       width: 50px;
@@ -921,11 +1030,19 @@ button.slick-prev {
       text-align: center;
       line-height: 50px;
       margin-right: 20px; }
+      @media (max-width: 767px) {
+        .footer ul li .icon {
+          width: 30px;
+          height: 30px;
+          line-height: 30px; } }
     .footer ul li a {
       color: #fff;
       font-size: 15px; }
       .footer ul li a i {
         color: #fff; }
+      @media (max-width: 767px) {
+        .footer ul li a {
+          font-size: 13px; } }
 
 .dot-navi {
   width: 10px;
@@ -971,38 +1088,67 @@ button.slick-prev {
     .dot-navi li.active a {
       transform: scale(1.8);
       background: #92c83e; }
+  @media (max-width: 767px) {
+    .dot-navi {
+      display: none; } }
 
-#main-visual {
+#main-visual .slide-container li {
   position: relative; }
-  #main-visual .main-cup-tea {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    opacity: 0;
-    transform: translateY(80px);
-    -moz-transition: all 0.4s ease-out;
-    -o-transition: all 0.4s ease-out;
-    -webkit-transition: all 0.4s ease-out;
-    -ms-transition: all 0.4s ease-out; }
-  #main-visual .txt-draw {
-    position: absolute;
-    top: 43%;
-    left: 10%;
-    height: 200px; }
-  #main-visual .txt-love {
-    position: absolute;
-    top: 30%;
-    left: 10%;
-    height: 200px;
-    opacity: 0;
-    transform: translateY(-80px);
-    -moz-transition: all 0.4s ease-out;
-    -o-transition: all 0.4s ease-out;
-    -webkit-transition: all 0.4s ease-out;
-    -ms-transition: all 0.4s ease-out; }
-  #main-visual img {
-    line-height: 1;
-    vertical-align: bottom; }
+
+#main-visual .main-cup-tea {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  transform: translateY(80px);
+  -moz-transition: all 0.4s ease-out;
+  -o-transition: all 0.4s ease-out;
+  -webkit-transition: all 0.4s ease-out;
+  -ms-transition: all 0.4s ease-out;
+  height: auto; }
+
+#main-visual .txt-draw {
+  position: absolute;
+  top: 43%;
+  left: 10%;
+  height: 200px; }
+
+#main-visual .txt-love {
+  position: absolute;
+  top: 30%;
+  left: 10%;
+  height: 200px;
+  opacity: 0;
+  transform: translateY(-80px);
+  -moz-transition: all 0.4s ease-out;
+  -o-transition: all 0.4s ease-out;
+  -webkit-transition: all 0.4s ease-out;
+  -ms-transition: all 0.4s ease-out; }
+
+#main-visual img {
+  line-height: 1;
+  vertical-align: bottom; }
+
+#main-visual .main-img {
+  height: 100vh; }
+
+@media (max-width: 767px) {
+  #main-visual {
+    height: 100vh; }
+    #main-visual .txt-love {
+      width: 90%;
+      left: 5%;
+      top: 23%;
+      height: 150px; }
+    #main-visual .txt-draw {
+      height: 150px;
+      top: 33%;
+      left: 5%;
+      width: 90%; } }
+
+@media (max-width: 767px) {
+  body {
+    overflow-x: hidden; } }
 
 .about-section {
   background: url("../img/top/bg_about.jpg") repeat left top;
@@ -1025,12 +1171,18 @@ button.slick-prev {
     height: 100%;
     background: url("../img/top/bg_text.png") no-repeat left center;
     background-size: 100% auto; }
+  @media (max-width: 767px) {
+    .about-section {
+      padding: 50px 0; } }
 
 .mission-section {
   min-height: 80vh;
   position: relative;
   color: #fff;
   z-index: 500; }
+  @media (max-width: 767px) {
+    .mission-section {
+      padding-bottom: 40px; } }
   .mission-section .container {
     display: flex;
     justify-content: flex-end;
@@ -1046,6 +1198,14 @@ button.slick-prev {
     width: 48%;
     transform: translateY(-50%);
     z-index: 300; }
+    @media (max-width: 767px) {
+      .mission-section__img {
+        position: relative;
+        top: inherit;
+        left: inherit;
+        width: 100% !important;
+        transform: inherit;
+        margin-bottom: 40px; } }
   .mission-section__leaf {
     position: absolute;
     right: 70%;
@@ -1060,6 +1220,9 @@ button.slick-prev {
     position: absolute;
     top: 0;
     right: 0; }
+    @media (max-width: 767px) {
+      .mission-section::before {
+        width: 100%; } }
   .mission-section::after {
     content: '';
     width: 30%;
@@ -1068,6 +1231,9 @@ button.slick-prev {
     position: absolute;
     top: 0;
     left: 0; }
+    @media (max-width: 767px) {
+      .mission-section::after {
+        display: none; } }
   .mission-section-grid {
     position: absolute;
     background: #f2f2f2;
@@ -1086,12 +1252,18 @@ button.slick-prev {
   position: relative;
   overflow: hidden;
   padding: 120px 0; }
+  @media (max-width: 767px) {
+    .menu-section {
+      padding: 50px 0px; } }
   .menu-section-wrap {
     width: 100%; }
   .menu-section__top {
     top: 0;
     left: -5%;
     position: absolute; }
+    @media (max-width: 767px) {
+      .menu-section__top img {
+        height: 150px; } }
   .menu-section__bottom {
     position: absolute;
     bottom: -5%;
@@ -1137,9 +1309,15 @@ button.slick-prev {
           position: absolute;
           bottom: 0;
           left: 0; }
+      @media (max-width: 767px) {
+        .menu-section-list li {
+          padding: 0 15px 10px; } }
     .menu-section-list a {
       color: #313131;
       font-size: 20px; }
+      @media (max-width: 767px) {
+        .menu-section-list a {
+          font-size: 13px; } }
   .menu-section-tab {
     margin-top: 50px;
     display: none; }
@@ -1171,6 +1349,9 @@ button.slick-prev {
   overflow: hidden; }
   .location-section-wrap {
     width: 100%; }
+  @media (max-width: 767px) {
+    .location-section {
+      padding: 50px 0px; } }
 
 .contact-section {
   min-height: 80vh;
@@ -1186,6 +1367,9 @@ button.slick-prev {
     width: 100%; }
   .contact-section .input-page {
     color: #fff; }
+  @media (max-width: 767px) {
+    .contact-section {
+      padding: 50px 0px; } }
 
 .anim-contain.leaf-anim {
   width: 100%;
@@ -1288,6 +1472,53 @@ button.slick-prev {
     transform: translate(-50%, -50%) rotate(360deg); }
   100% {
     transform: translate(-50%, -50%) rotate(360deg); } }
+
+#location_page .about-section {
+  min-height: 100vh; }
+
+#location_page .nav-link {
+  color: #fff !important; }
+
+#location_page .lang-menu a {
+  color: #fff !important; }
+
+#location_page .lang-menu li:last-child {
+  border-left: 1px solid #fff; }
+
+#location_page .header-link {
+  color: #fff !important; }
+
+#location_page .wrap_controls {
+  font-family: "Josefin Sans", sans-serif; }
+  #location_page .wrap_controls ul li {
+    margin-top: 15px;
+    padding-right: 15px; }
+    #location_page .wrap_controls ul li.active {
+      background: rgba(146, 200, 62, 0.5); }
+    #location_page .wrap_controls ul li:first-child {
+      margin-top: 0; }
+    #location_page .wrap_controls ul li a {
+      color: #fff !important;
+      font-weight: bold !important;
+      font-size: 18px !important; }
+      #location_page .wrap_controls ul li a p {
+        color: #E02020; }
+      #location_page .wrap_controls ul li a em {
+        font-size: 12px;
+        font-style: normal;
+        display: inline-block;
+        margin: 5px 0;
+        font-weight: normal !important;
+        line-height: 1.5; }
+
+#location_page .container {
+  max-width: 1200px; }
+
+#location_page .wrap-map {
+  max-height: 60vh; }
+
+#location_page #controls {
+  overflow-y: auto; }
 
 #top .hideSide ul li:nth-child(1) {
   background: #e1e1e1; }
