--- a/wp-content/themes/rapha/common/sass/_header.scss
+++ b/wp-content/themes/rapha/common/sass/_header.scss
@@ -15,8 +15,30 @@
 	width: 100%;
 	.img-logo {
 		height: 80px;
+		@media (max-width: 767px) {
+			height: 45px;
+		}
 	}
 	z-index: 1000;
+	@media (max-width: 767px) {
+		padding: 10px 15px;
+	}
+	.nav-menu-button {
+		position: relative;
+		float: right;
+		cursor: pointer;
+		width: 40px;
+		height: 40px;
+		.bar1,
+		.bar2,
+		.bar3 {
+		  width: 30px;
+		  height: 4px;
+		  background-color: #333;
+		  margin: 6px auto;
+		  transition: 0.4s;
+		}
+	}
 }
 
 .fix-header {
@@ -111,6 +133,9 @@
 	color: $color-black;
 	&:hover {
     	opacity: .6;
+	}
+	@media (max-width: 767px) {
+		margin: 0 20px;
 	}
 }
 
