--- a/wp-content/themes/rapha/common/sass/_common.scss
+++ b/wp-content/themes/rapha/common/sass/_common.scss
@@ -249,6 +249,14 @@ button {
 			}
 		}
 	}
+	&--25 {
+		margin-top: 25px;
+		@media (max-width: 767px) {
+			&--mb {
+				margin-top: 20px;
+			}
+		}
+	}
 	&--30 {
 		margin-top: 30px;
 		@media (max-width: 767px) {
@@ -455,6 +463,7 @@ table.table-form-page {
 		height: 35px;
 		line-height: 35px;
 		font-size: 12px;
+		padding: 0 15px;
 	}
 	.input-page {
 		height: 35px;
@@ -717,27 +726,33 @@ button.slick-prev {
 
 .slick-dots {
 	position: absolute;
-	bottom: 10%;
+	bottom: 80px;
 	right: 50px;
+	z-index: 1500;
 	li {
 		display: inline-block;
 		margin-right: 10px;
+		opacity: .6;
 		&:last-child {
 			margin-right: 0;
 		}
-		.slick-active button {
+		button {
+			width: 15px;
+			height: 15px;
+			font-size: 0;
+			outline: none;
+			border-radius: 100%;
+			background: #052026; 
+			opacity: .2;
+		}
+		&.slick-active button {
 			opacity: 1;
+			button {
+				background: $color-green;
+			}
 		}
 	}
-	button {
-		width: 15px;
-		height: 15px;
-		font-size: 0;
-		outline: none;
-		border-radius: 100%;
-		background: #052026; 
-		opacity: .2;
-	}
+	
 }
 
 @media only screen and (min-width: 768px) {
