--- a/wp-content/themes/rapha/common/sass/_home.scss
+++ b/wp-content/themes/rapha/common/sass/_home.scss
@@ -260,7 +260,7 @@ body {
         }
     }
     &-tab {
-        margin-top:30;
+        margin-top:30px;
         display: none;
         i {
             color: $color-green;
