--- a/wp-content/themes/rapha/common/css/style.css
+++ b/wp-content/themes/rapha/common/css/style.css
@@ -415,6 +415,9 @@ button {
 .fz--18 {
   font-size: 18px; }
 
+.fz--24 {
+  font-size: 24px; }
+
 .flex-box {
   display: flex; }
   .flex-box--between {
@@ -884,6 +887,9 @@ button.slick-prev {
       .slick-dots li.slick-active button button {
         background: #92c83e; }
 
+.min-heigt-70 {
+  min-height: 70vh; }
+
 .header {
   padding: 20px 0; }
 
@@ -1330,7 +1336,7 @@ button.slick-prev {
         .menu-section-list a {
           font-size: 13px; } }
   .menu-section-tab {
-    margin-top: 30;
+    margin-top: 30px;
     display: none; }
     .menu-section-tab i {
       color: #92c83e;
@@ -1688,31 +1694,33 @@ button.slick-prev {
     border-radius: 10px;
     overflow: hidden;
     margin-top: 30px; }
-    .dashboard .list-products li h4 {
-      position: relative;
-      border-bottom: 1px solid #4D675D; }
-      .dashboard .list-products li h4 a {
-        color: #313131;
-        background: #f5f5f5;
-        display: block;
-        font-size: 16px;
-        font-weight: bold;
-        padding: 15px; }
-    .dashboard .list-products li:first-child ul {
-      display: block; }
-    .dashboard .list-products li ul {
-      display: none; }
-      .dashboard .list-products li ul li {
-        padding: 15px;
-        font-size: 14px; }
-        .dashboard .list-products li ul li .btn-page {
-          opacity: .3; }
-        .dashboard .list-products li ul li:hover {
-          background: #e1e1e1; }
-          .dashboard .list-products li ul li:hover .btn-page {
-            opacity: 1; }
-          .dashboard .list-products li ul li:hover .list-products-quantity {
-            opacity: 1; }
+    .dashboard .list-products li {
+      align-items: center; }
+      .dashboard .list-products li h4 {
+        position: relative;
+        border-bottom: 1px solid #4D675D; }
+        .dashboard .list-products li h4 a {
+          color: #313131;
+          background: #f5f5f5;
+          display: block;
+          font-size: 16px;
+          font-weight: bold;
+          padding: 15px; }
+      .dashboard .list-products li:first-child ul {
+        display: block; }
+      .dashboard .list-products li ul {
+        display: none; }
+        .dashboard .list-products li ul li {
+          padding: 15px;
+          font-size: 14px; }
+          .dashboard .list-products li ul li .btn-page {
+            opacity: .3; }
+          .dashboard .list-products li ul li:hover {
+            background: #e1e1e1; }
+            .dashboard .list-products li ul li:hover .btn-page {
+              opacity: 1; }
+            .dashboard .list-products li ul li:hover .list-products-quantity {
+              opacity: 1; }
     .dashboard .list-products-quantity {
       position: relative;
       opacity: .3; }
@@ -1745,9 +1753,11 @@ button.slick-prev {
       .dashboard .list-cart li a {
         color: #07407e; }
     .dashboard .list-cart-name {
-      width: 80%; }
+      width: 60%;
+      font-size: 14px; }
     .dashboard .list-cart-quantity {
-      width: 10%; }
+      width: 22%;
+      font-size: 14px; }
   .dashboard .numbCart {
     font-family: 'Roboto', sans-serif;
     font-style: normal; }
